Initial CSS and functions

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
 <body>
 
-  <div>Time: <span id="timer">0</span></div>
+  <div class="timer">Time: <span id="timer">0</span></div>
 
   <div class="main">
     <div id="landing-page" class="landing">
       <h2>Star Wars Trivia</h2>
       <p>
-        Test your useless knowledge by answering the following Star Wars trivia questions within the time limit. Wrong answers will cost you time! May the Force be with you.
+        Test your useless knowledge by answering the following Star Wars trivia questions within the time limit. Wrong
+        answers will cost you time! May the Force be with you.
       </p>
       <button id="start">Begin</button>
     </div>
@@ -31,7 +32,7 @@
       <h2>In my experience, there's no such thing as luck.</h2>
       <p>Final Score: <span id="final-score"></span>.</p>
       <p>
-        ENTER YOUR INITIALS: <input type="text" id="initials"/>
+        ENTER YOUR INITIALS: <input type="text" id="initials" />
         <button id="submit">Submit</button>
       </p>
     </div>
