--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button id="start">Begin</button>
     </div>
 
-    <div id="questions" class="hide">
+    <div id="questions" class="questions hide">
       <h2 id="question-title"></h2>
       <div id="options" class="options"></div>
     </div>
